--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "history": "^4.7.2",
+    "immutable": "^3.8.2",
+    "node-sass": "^4.9.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-devtools-extension": "^2.13.5",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "NODE_PATH=src/ react-scripts start",
+    "build": "NODE_PATH=src/ react-scripts build",
+    "test": "NODE_PATH=src/ react-scripts test",
     "test:lint:js": "eslint --ext=js --ext=jsx .",
     "test:lint:scss": "stylelint --config=.stylelintrc '**/*.scss'",
     "test:lint": "run-s test:lint:**",
@@ -32,10 +38,6 @@
   "devDependencies": {
     "enzyme": "^3.6.0",
     "eslint": "^5.6.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
     "flow-bin": "^0.82.0",
     "husky": "^1.1.0",
     "lint-staged": "^7.3.0",
@@ -45,15 +47,19 @@
     "stylelint-config-standard": "^18.2.0"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,json}": [
-      "eslint --fix",
-      "prettier --config .prettierrc --write",
+    "src /**/*.{js,md,jsx}": [
+      "prettier --trailing-comma es5 --single-quote --write",
       "git add"
     ],
-    "src/**/*.{scss,css}":[
+    "src/**/*.{scss,css}": [
       "stylelint --config=.stylelintrc --fix",
       "prettier --config .prettierrc --write",
       "git add"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
