--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,12 +16,26 @@ jobs:
         # fallback to using the latest cache if no exact match is found
         - v1-dependencies-
 
-      - run: yarn
+      - run:
+        name: "Install Dependencies"
+        command: yarn
+
+      - run: mkdir -p reports/
 
       - save_cache:
         paths:
           - node_modules
         key: v1-dependencies-{{ checksum "package.json" }}
-
+      - run:
+          name: "JavaScript Linter"
+          command: yarn test:lint --format junit -o reports/junit/js-lint-results.xml
       # run tests!
-      - run: yarn test
+      - run:
+          name: "React tests"
+          command: yarn test --ci --testResultsProcessor="jest-junit" --coverage --reporters=jest-junit
+          environment:
+              JEST_JUNIT_OUTPUT: "reports/junit/js-test-results.xml"
+      - store_test_results:
+        path: reports/junit
+      - store_artifacts:
+        path: reports/junit
