--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
+    "jest-junit": "^5.2.0",
     "node-sass": "^4.9.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -20,6 +21,7 @@
   "scripts": {
     "start": "NODE_PATH=src/ react-scripts start",
     "build": "NODE_PATH=src/ react-scripts build",
+    "postbuild": "react-snap",
     "test": "NODE_PATH=src/ react-scripts test",
     "test:lint:js": "eslint --ext=js --ext=jsx .",
     "test:lint:scss": "stylelint --config=.stylelintrc '**/*.scss'",
@@ -40,6 +42,7 @@
     "flow-bin": "^0.82.0",
     "husky": "^1.1.0",
     "lint-staged": "^7.3.0",
+    "npm-run-all": "^4.1.3",
     "prettier": "^1.14.3",
     "prop-types": "^15.6.2",
     "stylelint": "^9.6.0",
