--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,14 @@
 version: 2
 jobs:
-  build:
+  test-react:
     docker:
       - image: circleci/node:8.12
 
-    working_directory: ~/repo
+    working_directory: ~/repo/frontend
 
     steps:
-      - checkout
-
+      - checkout:
+          path: ~/repo
       # Download and cache dependencies
       - restore_cache:
           keys:
@@ -17,25 +17,33 @@ jobs:
           - v1-dependencies-
 
       - run:
-        name: "Install Dependencies"
-        command: yarn
+          name: "Install Dependencies"
+          command: yarn
 
       - run: mkdir -p reports/
 
       - save_cache:
-        paths:
-          - node_modules
-        key: v1-dependencies-{{ checksum "package.json" }}
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
       - run:
-        name: "JavaScript Linter"
-        command: yarn test:lint --format junit -o reports/junit/js-lint-results.xml
+          name: "JavaScript Linter"
+          command: yarn test:lint:js --format junit -o reports/junit/js-lint-results.xml
+      - run:
+          name: "Style Linter"
+          command: yarn test:lint:scss --format junit -o reports/junit/css-lint-results.xml
       # run tests!
       - run:
-        name: "React tests"
-        command: yarn test --ci --testResultsProcessor="jest-junit" --coverage --reporters=jest-junit
-        environment:
-          JEST_JUNIT_OUTPUT: "reports/junit/js-test-results.xml"
+          name: "React tests"
+          command: yarn test --ci --testResultsProcessor="jest-junit" --coverage --reporters=jest-junit
+          environment:
+            JEST_JUNIT_OUTPUT: "reports/junit/js-test-results.xml"
       - store_test_results:
-        path: reports/junit
+          path: reports/junit
       - store_artifacts:
-        path: reports/junit
+          path: reports/junit
+workflows:
+  version: 2
+  just-build:
+    jobs:
+      - test-react
