--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bugsnag-js": "^4.7.3",
+    "bugsnag-react": "^1.1.1",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
     "jest-junit": "^5.2.0",
@@ -49,7 +51,7 @@
     "stylelint-config-standard": "^18.2.0"
   },
   "lint-staged": {
-    "src /**/*.{js,md,jsx}": [
+    "src/**/*.{js,md,jsx}": [
       "prettier --trailing-comma es5 --single-quote --write",
       "git add"
     ],
