--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
 
       - run:
           name: "Install Dependencies"
-          command: yarn
+          command: npm install
 
       - run: mkdir -p reports/
 
@@ -28,12 +28,12 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
       - run:
           name: "JavaScript Linter"
-          command: yarn test:lint:js --format junit -o reports/junit/js-lint-results.xml
+          command: npm run test:lint:js --format junit -o reports/junit/js-lint-results.xml
 
       # run tests!
       - run:
           name: "React tests"
-          command: yarn test --ci --testResultsProcessor="jest-junit" --coverage --reporters=jest-junit
+          command: npm run test --ci --testResultsProcessor="jest-junit" --coverage --reporters=jest-junit
           environment:
             JEST_JUNIT_OUTPUT: "reports/junit/js-test-results.xml"
       - store_test_results:
