--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,9 +26,9 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-      - run:
-          name: "JavaScript Linter"
-          command: npm run test:lint:js --format junit -o reports/junit/js-lint-results.xml
+#       - run:
+#           name: "JavaScript Linter"
+#           command: npm run test:lint:js --format junit -o reports/junit/js-lint-results.xml
 
       # run tests!
       - run:
