--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,20 @@
   "homepage": "https://github.com/anvartech/budget-it-app#readme",
   "dependencies": {
     "@grpc/proto-loader": "^0.3.0",
+    "bcrypt": "^3.0.2",
+    "body-parser": "^1.18.3",
     "bugsnag": "^2.4.3",
-    "grpc": "^1.16.0"
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "grpc": "^1.16.0",
+    "sequelize": "^4.41.2"
+  },
+  "devDependencies": {
+    "dotenv": "^6.1.0",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "morgan": "^1.9.1"
   }
 }
